/*
 * ============================================================================
 *
 * Copyright (c) 2022 YouTransactor
 *
 * All Rights Reserved.
 *
 * This software is the confidential and proprietary information of YouTransactor
 * ("Confidential Information"). You  shall not disclose or redistribute such
 * Confidential Information and shall use it only in accordance with the terms of
 * the license agreement you entered into with YouTransactor.
 *
 * This software is provided by YouTransactor AS IS, and YouTransactor
 * makes no representations or warranties about the suitability of the software,
 * either express or implied, including but not limited to the implied warranties
 * of merchantability, fitness for a particular purpose or non-infringement.
 * YouTransactor shall not be liable for any direct, indirect, incidental,
 * special, exemplary, or consequential damages suffered by licensee as the
 * result of using, modifying or distributing this software or its derivatives.
 *
 * ==========================================================================
 */

plugins {
    id 'com.android.application'
    id 'com.palantir.git-version'version "3.1.0"
}

Properties localProps = new Properties()
localProps.load(rootProject.file('local.properties').newDataInputStream())
def gitInfos = versionDetails()

android {
    namespace "com.youtransactor.sampleapp"

    signingConfigs {
        release {
            storeFile = project.file(localProps.getProperty("sign.keystore.path"))
            storePassword = localProps.getProperty("sign.keystore.password")
            keyAlias = localProps.getProperty("sign.key.alias")
            keyPassword = localProps.getProperty("sign.key.password")
        }
    }

    compileSdk 34
    defaultConfig {
        applicationId "com.youtransactor.sampleapp"
        minSdk 34
        targetSdkVersion 34
        versionCode 13820
        versionName "1.3.8.20"
        multiDexEnabled true
        archivesBaseName = "SampleApp-$versionName"
    }

    buildTypes {
        debug {
            debuggable true
            signingConfig signingConfigs.release
        }

        internal {
            initWith debug
            versionNameSuffix "-01"
            signingConfig signingConfigs.release
        }

        release {
            signingConfig signingConfigs.release
        }
    }
    compileOptions {
        sourceCompatibility = '17'
        targetCompatibility = '17'
    }

    applicationVariants.all { variant ->
        variant.outputs.all { output ->
            outputFileName = "SampleApp-${variant.versionName}-${variant.buildType.name}.apk"
        }
    }

}

dependencies {
    /* start aar dependencies */
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.commons:commons-compress:1.20'
    implementation 'com.google.code.gson:gson:2.8.6'
    implementation 'org.apache.commons:commons-io:1.3.2'
    implementation 'commons-codec:commons-codec:1.15'
    implementation 'androidx.annotation:annotation:1.7.1'
    implementation 'com.google.guava:guava:30.0-jre'
    implementation 'org.zeromq:jeromq:0.5.1'
    implementation files('libs/SecureServiceAPI-1.1.6.21-release.aar')
    implementation files('libs/libApp-1.3.8.20-release.aar')
    /* end aar dependencies */


    implementation 'com.google.android.material:material:1.12.0' //use this when android version > 4.4
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.github.tony19:logback-android:3.0.0'
    implementation 'org.slf4j:slf4j-api:2.0.17'

    implementation fileTree(dir: "libs", include: ["*.aar"])

    debugImplementation 'com.squareup.leakcanary:leakcanary-android:3.0-alpha-8'
}